Correct some inspection code warnings Use full size image path when taking photo from camera User thumnail image to show in UI